fix(dialog): add scrollbar

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -51,6 +51,9 @@ body {
   font-variant-numeric: tabular-nums;
   color: var(--base);
   background-color: var(--background);
+  *.disable-scroll {
+    overflow-y: hidden;
+  }
 }
 #app {
   display: grid;
@@ -232,10 +235,11 @@ label:has([type="checkbox"]) {
 }
 dialog {
   position: fixed;
-  top: 15%;
+  top: 15vh;
   left: 0;
   width: 100%;
   max-width: 25rem;
+  max-height: 80vh;
   padding: 0;
   margin: 0 auto;
   color: var(--base);
